--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ function GetQueryValue(queryName) {
 
  
 jQuery(function() {
- if(!url){$("#home").css("display","block");}else{$("#home").remove();$("viewp").remove();} 
+ if(!url){$("#home").css("display","block");}else{$("#home").remove();$("#viewp").remove();} 
 });
 
 jQuery(function() {
