--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ jQuery(function() {
                 
                 //document.getElementById('cover1').style.display = 'none'
             
-            jQuery(setTimeout(function() {jQuery('#foote').css('display','block');	},5000));
+            jQuery(function() {jQuery('#foote').css('display','block');	});
         });    
         });
 
