--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" id="viewp" content="width=device-width, initial-scale=1.0,  minimum-scale=1.0, maximum-scale=1.0">
+	<script src="/rss/update.js"></script>
+	<link rel="stylesheet" type="text/css" href="./barrager.css">
     <script type="text/javascript" src="./jquery-1.8.2.js"></script>
     <script src="./jquery.masonry.min.js"></script>
 <script type="text/javascript" src="./jquery.jfeed.pack.js"></script>
