--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./barrager.css">
     <script type="text/javascript" src="./jquery-1.8.2.js"></script>
     <script src="./jquery.masonry.min.js"></script>
+    <script type="text/javascript" src="./jquery.barrager.js"></script>
 <script type="text/javascript" src="./jquery.jfeed.pack.js"></script>
 <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
